# TP_Inicial_LaboSoftware

./: .gitignore  README.md  actions.py  app.py  como_usar.txt  dashboards_windows.py  gui.py  helpers.py  main.py  modern_gui.py  presence.py  pyme.xlsx  pyme_san_ignacio.db  pyproject.toml  report_app.py  sync_supabase.py
src/: modern_gui.py  presence.py  utils_db.py  utils_files.py  utils_recognition.py
src/db/: init_db.py
tests/: comparison.py  webcam.py
tests/db_images/: .already_computed_face_encodings.pkl
