[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto_profesional"
version = "0.1.0"
description = "Identificación de personal con reconociento facial para PYME San Ignacio"
authors = [
    {name="La Hermandad del Algoritmo"}
]

requires-python="==3.11.*"
dependencies = [
    "opencv-python==4.9.0.80",
    "numpy==1.26.3",
    "face_recognition",
    "dlib @ https://github.com/z-mahmud22/Dlib_Windows_Python3.x/raw/main/dlib-19.24.1-cp311-cp311-win_amd64.whl"
]